language/move-lang/tests/move_check/typing/assign_nested.exp
error[E01009]: invalid assignment
   ┌─ tests/move_check/typing/assign_nested.move:14:19
   │
14 │         (_, x, _, s.f) = four();
   │                   ^^^ Invalid assignment syntax. Expected: a local, a field write, or a deconstructing assignment

